@@ -1,5 +1,5 @@
 2009-11-01 Eugene Hlyzov  <hlyzov@gmail.com>
-        [feature] Add ability to specify static values    
+        [feature] Add ability to specify static values
 2009-09-07 Eugene Hlyzov  <hlyzov@gmail.com>
 	[feature] Add ability to suppress labels
 	minor refactoring
@@ -7,3 +7,6 @@
 	fix bug with nil association
 	fix bug with wrong label
 	add tests for fixed bugs
+2010-01-15 Eugene Hlyzov  <hlyzov@gmail.com>
+	[feature] Add configuration options
+	please check README - there is a change in default behaviour
